--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
     
     <!-- Header -->
     <header class="text-center space-y-3">
-      <h1 class="text-4xl font-extrabold text-gray-800 tracking-tight">Mangodesk</h1>
+      <h1 class="text-4xl font-extrabold text-gray-800 tracking-tight">UJJWAL</h1>
       <p class="text-lg text-gray-500">AI-powered Meeting Notes & Summaries</p>
     </header>
 
